Add annobin to platform
It is pulled in via boolean dependencies, which don't work with DNF download --resolve

--- a/yaml/bootstrap-all-rawhide.yaml
+++ b/yaml/bootstrap-all-rawhide.yaml
@@ -22,6 +22,8 @@ platform:
     - lujavrite
     - rpm-devel
     - jurand
+    - annobin-plugin-gcc
+    - gcc-plugin-annobin
 macros:
   vendor: MBI
   _buildhost: mbs.kjnet.xyz
